# smart_helmet

application/: CMakeLists.txt  Kconfig  ReleaseNotes.md  prj.conf
application/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
application/boards/nordic/nrf7002dk_nrf5340_cpuapp/: Kconfig.defconfig  Kconfig.nrf7002dk_nrf5340_cpuapp  board.cmake  board.yml  nrf7002dk_nrf5340_cpuapp.dts  nrf7002dk_nrf5340_cpuapp.yml
application/boards/nordic/shiarsband/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.shiarsband  board.c  board.cmake  board.yml  shiarsband-cpuapp_partitioning.dtsi  shiarsband_common-pinctrl.dtsi  shiarsband_common.dtsi  (+9 more)
application/drivers/: CMakeLists.txt  Kconfig
application/drivers/sensor/: CMakeLists.txt  Kconfig
application/log/: latest_list
application/src/: defines.h  includes.h  json_struct_defines.h  main.c  main.h
application/src/battery/: battery.c  battery.h
application/src/ble/: CMakeLists.txt  ble_conn.c  ble_conn.h
application/src/drivers/: CMakeLists.txt  display_controller.c  display_controller.h
application/src/events/: battery_event.c  battery_event.h  env_sensor_event.c  env_sensor_event.h  imu_sensor_event.c  imu_sensor_event.h  periodic_event_def.c  periodic_event_def.h  watch_periodic_events.c  watch_periodic_events.h
application/src/sensors/: CMakeLists.txt  Kconfig  environment_sensor.c  environment_sensor.h  imu_sensor.c  imu_sensor.h  sensor_bag.c  sensor_bag.h  sensor_defines.h  temp_sensor.c  temp_sensor.h
application/src/storage/: CMakeLists.txt  storage.c  storage.h
(+40 files in other folders)
